--- a/client/src/Style/Navigation.css
+++ b/client/src/Style/Navigation.css
@@ -4,9 +4,9 @@ body {
 
 .navigation {
   margin: auto;
-  margin-left: 15px;
-  width: 220px;
-  border: 3px solid burlywood;
+  width: 100%;
+  border: 3px solid rgb(83, 201, 191);
+  background-color: rgb(83, 201, 191);
   padding: 10px;
 }
 
@@ -16,6 +16,6 @@ body {
   width: 50px;
   outline: none;
   border: none;
-  background-color: white;
   font-size: 15px;
+  background: rgb(83, 201, 191);
 }
